# ToscaDeliciosa

./: .gitignore  ERA5_modules.py  Guide Module Tosca.ipynb  LICENSE.md  README.md  TOSCA_modules.py  User_guide.ipynb  main.py  pyproject.toml  trash.py  twitter_modules.py
tosca_deliciosa/: ERA5_modules.py  main.py
tosca_deliciosa/src/: ERA5_modules.py  TOSCA_modules.py  main.py
