[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tosca_deliciosa"
version = "0.0.1"
authors = [
  { name="Daniel Maksimov", email="daniel.maksimov@ird.fr" },
]
description = "A package used for downloading and visualising climate data"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DanielMaksimov/ToscaDeliciosa"
"Bug Tracker" = "https://github.com/DanielMaksimov/ToscaDeliciosa/issues"